# Sign-Language-Translator

./: .gitignore  README.md  pyproject.toml
SignLanguage/: .gitattributes  main.py  main.ui  sign_to_text.py  ui_main.py
SignLanguage/SpeechToSign/: compiler.py  gui.py  translator.py
