[tool.poetry]
name = "sign-language-translator"
version = "0.1.0"
description = "Sign Language Translator"
authors = ["Harikeshav R <r.harikeshav@gmail.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
nltk = "^3.8.1"
pyside6 = "^6.5.1.1"
opencv-python = "^4.8.0.74"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
